Resolves: tdf#159046 hang on export of math objects in cells

regression from:

commit a9d6b6ef049dd41c91a30c03df0ba38ba8dcada8
Date:   Thu Oct 5 14:12:51 2023 +0100

    crash copying text + chart to clipboard with InputOptions::TextWysiwyg

    of true, the mxPoolHelper is still null when trying to create a
    Printer to use as a reference device

revert that, and use a different simpler workaround for the original
crash case.

Change-Id: I74cec710aec033e1652e637ed056dae1c261aa98
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/161742
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>